[tool.poetry]
name = "unit-cryptography"
version = "0.1.0"
description = ""
authors = ["emma <eqbrown@isf.edu.hk>"]
readme = "README.md"
packages = [{include = "unit_cryptography"}]

[tool.poetry.dependencies]
python = "^3.10"
PyPDF2 = "^2.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
